@@ -1,4 +1,4 @@
-.\" RCSid "$Id: ray.1,v 1.47 2024/12/09 19:21:38 greg Exp $"
+.\" RCSid "$Id: ray.1,v 1.48 2025/05/29 16:42:28 greg Exp $"
 .\" Print using the -ms macro package
 .DA 12/09/2024
 .LP
@@ -422,6 +422,23 @@ mod mirror id
 0
 3 red green blue
 .DE
+While alternate materials that are reflective will appear as normal,
+indirect rays will use the mirror's reflectance rather than the
+alternate type.
+Transmitting materials are an exception, where both transmission and
+reflection will use the alternate type for all rays not specifically
+targeting virtual light sources.
+Therefore, transmitting alternate types should only have pure specular
+reflection if they reflect at all, to maintain a valid calculation.
+.PP
+The mirror material type reflects light sources only from the front side
+of a surface, regardless of any alternate material.
+If virtual source generation is desired on both sides, two coincident
+surfaces with opposite normal orientations may be employed to achieve
+this effect.
+The reflectance and alternate material type may be 
+different for the overlapped surfaces,
+and the two sides will behave accordingly.
 .LP
 .UL Prism1
 .PP
