@@ -2820,3 +2820,7 @@ half-maximum sizes of peaks in SIR and XML inputs.
 Changed default super-sampling in bsdf2ttree from 256 to 64,
 since there doesn't seem to be much benefit to the higher
 sampling rate for most BSDFs.
+
+Fixed problem with "mirror" primitive, which was not permitting
+indirect rays to transmit through alternate material type.
+Thanks to Jon Sargent for finding problem and help resolving it.
